--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,20 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Set backend URL in window object for config resolution
+      (function() {
+        const isVercel = window.location.hostname.includes('vercel.app');
+        const isLocalhost = window.location.hostname === 'localhost';
+        const backendUrl = isVercel ? 'https://aiverse-sbs6.onrender.com' : 'http://localhost:5000';
+        
+        window.__VITE_API_URL = backendUrl;
+        window.__API_BASE_URL = backendUrl;
+        window.__BACKEND_URL = backendUrl;
+        
+        console.log('[window] Set backend URL:', backendUrl, '(isVercel:', isVercel, ', isLocalhost:', isLocalhost, ')');
+      })();
+    </script>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
